--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -57,16 +57,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/playbackstate.js"></script>
     {{{_sections.script}}}
-    <script defer>
-      const inactive = document.querySelector('.navigation__tab--inactive')
-      const message = document.querySelector('.inactive-message')
-      inactive.addEventListener('click', () => {
-        message.classList.add('visible')
-        setTimeout(() => {
-          message.classList.remove('visible')
-        }, 3000)
-      })
-    </script>
+    <script src="/js/inactive.js"></script>
   </body>
 
 </html>
