--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -462,6 +462,10 @@ small {
   color: #171717;
 }
 
+.article__image {
+  width: 100%;
+}
+
 .ticketmaster__logo {
   padding: 10px;
   display: -webkit-box;
@@ -476,6 +480,8 @@ small {
   height: 30px;
   width: 30px;
   border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .ticketmaster__logo--main {
@@ -999,5 +1005,131 @@ small {
   border-top: 10px solid rgba(0, 0, 0, 0.8);
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
+}
+
+@-webkit-keyframes rotator {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+  }
+}
+
+@keyframes rotator {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+  }
+}
+
+.path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+          animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+}
+
+@-webkit-keyframes colors {
+  0% {
+    stroke: #fff;
+  }
+  25% {
+    stroke: #fff;
+  }
+  50% {
+    stroke: #fff;
+  }
+  75% {
+    stroke: #fff;
+  }
+  100% {
+    stroke: #fff;
+  }
+}
+
+@keyframes colors {
+  0% {
+    stroke: #fff;
+  }
+  25% {
+    stroke: #fff;
+  }
+  50% {
+    stroke: #fff;
+  }
+  75% {
+    stroke: #fff;
+  }
+  100% {
+    stroke: #fff;
+  }
+}
+
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    -webkit-transform: rotate(450deg);
+            transform: rotate(450deg);
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    -webkit-transform: rotate(450deg);
+            transform: rotate(450deg);
+  }
+}
+
+.loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 2em;
+}
+
+.loader__message {
+  color: #fff;
+  margin-top: 1em;
+}
+
+.loader__spinner {
+  -webkit-animation: rotator 1.4s linear infinite;
+          animation: rotator 1.4s linear infinite;
 }
 /*# sourceMappingURL=styles.css.map */
