--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -32,7 +32,7 @@
       <div class="spotify__refresh">
         <div class="spotify__progress"></div>
         <div class="spotify__song">
-          <span class="spotify__artist">Spotify isn't playing</span>
+          <span class="spotify__artist no-song">Spotify isn't playing</span>
           <span class="spotify__id">0</span>
         </div>
       </div>
