--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -860,8 +860,13 @@ small {
   text-align: center;
   align-items: center;
   flex-direction: column;
-  min-height: 100vh;
   justify-content: center;
+  position: absolute; 
+  left:0; 
+  right:0;
+  top:0; 
+  bottom:0;
+  margin: auto;
 
   &__logo {
     max-width: 80%;
