--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -43,13 +43,13 @@
     <footer class="navigation">
       <nav>
         <a href="/home" class="navigation__tab">
-          <img src="/images/home.png" alt="Home">
+          <img src="/images/home-active.svg" alt="Home">
         </a>
         <a href="/search" class="navigation__tab">
-          <img src="/images/search.png" alt="Search">
+          <img src="/images/search-active.svg" alt="Search">
         </a>
         <a href="#" class="navigation__tab navigation__tab--inactive">
-          <img src="/images/library.png" alt="Library">
+          <img src="/images/list-menu.svg" alt="Library">
         </a>
       </nav>
     </footer>
