--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -169,6 +169,10 @@ small {
   display: flex;
 }
 
+.navigation img {
+  max-width: 25px;
+}
+
 .navigation__tab {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -896,11 +900,12 @@ small {
   -webkit-transition: 0.2s;
   transition: 0.2s;
   cursor: pointer;
-}
-
-.spotify__remote:hover {
-  border: 1px solid #bebebe;
-  color: #bebebe;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .spotify__id {
